# uni-share

./: README.md  go.mod  main.go  mycode.tar  vcuda.proto
core/: CMakeLists.txt
core/container/: contInfoReg.c  container.h
core/controller/: control.c  control.h  pc_alg.c
core/interceptor/: hijack.h  hijack_dlsym.c  hijack_gpu.c  hijack_mlu.c
core/monitor/: monitor.c  monitor.h  monitor_gpu.c  monitor_mlu.c
deploy/: crd.yaml
deviceInfo/: gpu.go
k8sPlugins/: Dockerfile  Makefile  go.mod  go.sum  main.go  sockWatcher.go  volume.conf
k8sPlugins/client/: client  client.go
k8sPlugins/deploy/: mluCrd.yaml  uni-share.yaml
k8sPlugins/deviceInfo/: accelerator.go  gpu.go  gpu_types.go  mlu.go  mlu_types.go
k8sPlugins/pluginRegister/: const.go  factory.go  vMluCore.go  vMluMemory.go  vcore.go  vmemory.go
k8sPlugins/podWatch/: messenger.go  pod_mgr.go
k8sPlugins/register/: const.go  factory.go  vcore.go  vmemory.go
k8sPlugins/resourceManager/: const.go  manager.go  util.go
k8sPlugins/server/: const.go  managerServer.go  util.go
k8sPlugins/vcuda/: vcuda_grpc.pb.go
k8sPlugins/volume/: volume.go
nvidia/: const.go  factory.go  interface.go  managerServer.go  sockWatcher.go  util.go  vcore.go  vmemory.go
podWatch/: messenger.go  pod_mgr.go
vcuda/: vcuda.pb.go
